# leviathan

./: .cursorrules  .gitignore  .migrationignore  AGENT_MIGRATION_GUIDE.md  CLAUDE.md  GEMINI.md  HANDOFF_PROMPT.md  LICENSE  MEMORY_CONFIG_UPDATE.md  MIGRATION_PLAN.md  NAMESPACE_MIGRATION_PLAN.md  PLUGIN_HANDOFF.md  README.md  STRESS_OPTIMIZATION_AUDIT_REPORT.md  _01-codex.md  _01-prime.md  _01-whisper.md  _02-adapters.md  _02-refactor.md  _04-os-llm-testing-framework.md  _2do.md  _adapters.md  _cleanup.md  _cleanup_complete.md  _core.md  _desktop.md  _handoff.md  _hormones.md  _itsalivetools.md  _lego.md  _mediaforge.md  _refactor.md  _repo.md  _tree.md  _whisper.md  _workshop.md  _worktree.md  bi-directional-implementation.md  c  embeddings.json  (+14 more)
.claude/: hooks.json  session-dashboard.smart.md  settings.local.json
.github/: renovate.json
_archive/desktop-20250629-092145/src-tauri/: Cargo.toml
_archive/desktop-20250629-092145/src-tauri/icons/: README.md
_archive/desktop-20250629-092145/src-tauri/src/: main.rs  tray.rs
_ref/: cc.md  lost.jsonl
agent/: .env.example  .gitignore  CLAUDE.md  README.md  _06-memory-connection.js  _2do.md  benchmark-embeddings.js  benchmark-openai-only.js  create-refactor-worktree.js  create-session-rollup.js  embeddings.json  final-system-report.js  package-lock.json  package.json  run-full-ecosystem.js  simple-rollup-test.js  test-aci-calibration.mjs  test-e2e.sh  tools_list.json
content/: The Social Engineer's Guide to Open Source Adoptio.md  Top 10 Open Source Adoption Case Studies_ Social E.md  executive_summary.md
(+3456 files in other folders)
